[package]
name = "milena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
prost = "0.11.5"
tonic = "0.8.3"
rocksdb = "0.19.0"
lru = "0.8.1"
md5 = "0.7.0"
tokio-stream = "0.1.11"
futures-core = "0.3.25"
crc = "3.0.0"



[[bin]]
name = "cache-server"
path = "src/server.rs"



[build-dependencies]
tonic-build = "0.8.4"
