[package]
name = "milena-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.1"
aws-sdk-s3 = "1.9"
prost = "0.12"
tonic = "0.10"
rocksdb = "0.21.0"
lru = "0.8.1"
md5 = "0.7.0"
tokio-stream = "0.1.11"
futures-core = "0.3.25"
crc = "3.0.0"
anyhow = '1.0.0'
milena-protos = { path = "../milena-protos" }
futures = "0.3"
aws-types = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
thiserror = "1.0"
prometheus = "0.13"
warp = "0.3"


[[bin]]
name = "milena-cache"
path = "src/main.rs"


[build-dependencies]
tonic-build = "0.8.4"
