[package]
name = "milena-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
milena-protos = { path = "../milena-protos" }
tokio = { version = "1", features = ["full"] }
prost = "0.11.5"
tonic = "0.8.3"