[package]
name = "milena-router"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
milena-protos = { path = "../milena-protos" }
tokio = { version = "1.0", features = ["full"] }
prost = "0.11"
tonic = "0.10.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
conhash = "0.5"
twox-hash = "1.6.0"
deadpool = { version = "0.9", features = ["managed"] }
async-trait = "0.1"
governor = "0.5"
serde = { version = "1.0", features = ["derive"] }
